fix: improve styling on iOS

--- a/src/styles/blocks/_switch.scss
+++ b/src/styles/blocks/_switch.scss
@@ -11,6 +11,7 @@
     border: none;
     border-radius: var(--tg-rounded-full);
     background-color: var(--tg-primary-bg-hover);
+    flex: 0 0 auto;
 
     &:focus {
       outline: 0.25rem solid transparent;
