--- a/src/styles/blocks/_tree-input.scss
+++ b/src/styles/blocks/_tree-input.scss
@@ -12,6 +12,7 @@
   font-weight: 400;
   line-height: var(--tg-line-height-base);
   resize: none;
+  -webkit-appearance: none;
 
   &:focus {
     outline: none;
